# protocol-specs

./: .dockerignore  .gitignore  Dockerfile  Makefile  app.ml  dune  dune-project  install.sh  p  protocol  protocol.opam  protocol.opam.locked  readme.md
app/: dune  protocol.ml
artifact/: readme.md
case-studies/: run.sh
case-studies/2pc/: readme.md
case-studies/nbac/: readme.md
case-studies/paxos/: readme.md
lib/: UF.ml  actions.ml  ast.ml  boxes.ml  common.ml  dune  infer.ml  lexer.mll  lib.ml  log.ml  ltl_go.ml  monitor_go.ml  normalize.ml  parser.mly  parsing.ml  print.ml  project.ml  tla.ml
ltl3tools/: Dockerfile  build.sh  install.sh  ltl2mon
test/: actions.ml  dune  parse.ml
test/2pc.t/: 2pc-original.spec  2pc-property.spec  2pc-wait.spec  2pc.spec  run.t
test/actions.t/: run.t  simple.spec
test/basic.t/: basic.spec  run.t
test/functions.t/: fns.spec  run.t
test/go/basic/: Makefile  disj.spec  join.spec  main.go  preamble.spec  selfsend.spec  selfsend1.spec
test/go/fns/: Makefile  go.mod  main.go
test/hello.t/: run.t
test/ltl-go.t/: run.t
test/monitor-go.t/: run.t
test/nbac.t/: nbac.spec  run.t
test/parse.t/: parse.spec  run.t
test/paxos.t/: paxos.spec  run.t
test/project.t/: basic.spec  ex1.spec  run.t  three.spec
test/raft.t/: raft.spec  run.t
test/types.t/: run.t
