(library
 (name lib)
 (libraries unionFind pprint containers menhirLib)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))

; ppx_debug

(menhir
 (modules parser)
 (flags --table)
 ;(flags --unused-tokens)
 )

; (rule
;  (targets parser_messages.ml)
;  (deps parser.messages parser.mly)
;  (action
;   (with-stdout-to
;    %{targets}
;    (run menhir --compile-errors %{deps}))))

(ocamllex lexer)
