(library
 (name lib)
 (libraries
  str
  ppx_debug
  pprint
  containers
  containers.unix
  menhirLib
  ocamlgraph)
 (inline_tests)
 (preprocessor_deps
  (file ../ppx_debug.json))
 (preprocess
  (pps
   visitors.ppx
   ppx_debug
   ppx_expect
   ppx_deriving.show
   ppx_deriving.ord
   ppx_deriving.eq)))

; ppx_debug

(menhir
 (modules parser)
 (flags --table)
 ;(flags --unused-tokens)
 )

; (rule
;  (targets parser_messages.ml)
;  (deps parser.messages parser.mly)
;  (action
;   (with-stdout-to
;    %{targets}
;    (run menhir --compile-errors %{deps}))))

(ocamllex lexer)

(env
 (dev
  (flags
   (:standard -warn-error -A))))
